--- a/docs/docs/en-tête/authentification.mdx
+++ b/docs/docs/en-tête/authentification.mdx
@@ -1,9 +1,10 @@
 ---
 sidebar_position: 1
+custom_edit_url: null
 ---
 
 # Authentication
 
-**_En cours de construction_**
+**🚧 En cours de construction**
 
 ![alt text]("/../../../static/img/illustration/Bricklayer-bro.svg)
