--- a/docs/docs/en-tête/modules.mdx
+++ b/docs/docs/en-tête/modules.mdx
@@ -1,9 +1,10 @@
 ---
 sidebar_position: 2
+custom_edit_url: null
 ---
 
-# Navigation
+# Choix des modules
 
-**_En cours de construction_**
+**🚧 En cours de construction**
 
 ![alt text]("/../../../static/img/illustration/Bricklayer-bro.svg)
