--- a/docs/docs/commercial/navigation.mdx
+++ b/docs/docs/commercial/navigation.mdx
@@ -1,37 +1,54 @@
 ---
 sidebar_position: 2
+custom_edit_url: null
 ---
+
+import CustomCard from "../../src/components/utils/CustomCard.tsx";
 
 # Navigation
 
 ## Commerciaux
 
-<div class="card-demo" style={{ marginBottom: "2rem" }}>
-  <div class="card__body shadow--md">
-    <img src="/img/commercial/commercial_menu.png" alt="Commercial" />
-  </div>
-</div>
+<CustomCard img={"/img/commercial/commercial_menu.png"} />
+
+Cette partie permet :
+
+- Soit de filtrer le carnet d'adresses par utilisateur possédant le rôle de **"Commercial"**,
+- Soit de naviguer dans l'ensemble du carnet de client **sans filtrage** particulier.
 
 ## Catégories
 
-<div class="card-demo" style={{ marginBottom: "2rem" }}>
-  <div class="card__body shadow--md">
-    <img src="/img/commercial/category_menu.png" alt="Commercial" />
-  </div>
-</div>
+<CustomCard img={"/img/commercial/category_menu.png"} />
+
+Chaque client est classé dans **une seule catégorie** :
+
+- Constructeur,
+- Négoce,
+- Maitre d'œuvre,
+- Architecte,
+- Maçon,
+- Charpentier,
+- Serrurerie,
+- Autre → Correspondant aux clients n'étant pas catalogués dans les catégories précédentes.
 
 ## Clients / Groupes
 
-<div class="card-demo" style={{ marginBottom: "2rem" }}>
-  <div class="card__body shadow--md">
-    <img src="/img/commercial/customer_menu.png" alt="Commercial" />
-  </div>
-</div>
+<CustomCard img={"/img/commercial/customer_menu.png"} />
+
+Une fois une catégorie de client sélectionnée, une liste regroupant les clients et les groupements de clients est affichée :
+
+- **Client ** : Client indépendant n'appartenant pas à un groupe ou un réseau d'entreprise,
+- ** Groupes** : Regroupement de client sous une entité de groupe ou de réseau d'entreprise (exemple : Maisons Alysia, Procivis, ORCAB, ...)
 
 ## Client
 
-<div class="card-demo" style={{ marginBottom: "2rem" }}>
-  <div class="card__body shadow--md">
-    <img src="/img/commercial/customer.png" alt="Commercial" />
-  </div>
-</div>
+<CustomCard img={"/img/commercial/customer.png"} />
+
+La dernière étape est l'affichage d'une **fiche client** regroupant :
+
+- Les coordonnées d'un client (adresse postale, numéro de téléphone, ...),
+- Les interlocuteurs,
+- Le commercial référent,
+- Le nombre de dossiers produits et la facturation,
+- Les comptes-rendus de visite,
+- ...
