✨ Finalize appointment documentation + Add documentation on for creating new clients + Add links to suggestion link and online help in frontend

--- a/docs/docs/commercial/client/contact.mdx
+++ b/docs/docs/commercial/client/contact.mdx
@@ -1,6 +1,5 @@
 ---
 sidebar_position: 1
-custom_edit_url: null
 ---
 
 import CustomCard from "../../../src/components/utils/CustomCard.tsx";
@@ -152,7 +151,7 @@ Un commercial doit être assigné comme **"Commercial référent"** pour pouvoir
 
 :::
 
-## Nouvel contact
+## Nouveau contact
 
 <div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
   <img src={"/img/illustration/circle-plus.svg"} alt="Commercial" />
