--- a/docs/docs/commercial/client/visites-reunion.mdx
+++ b/docs/docs/commercial/client/visites-reunion.mdx
@@ -22,7 +22,7 @@ Cette partie liste l'ensemble des **Comptes-rendus de visite / réunion** enregi
   - RDV de courtoisie,
   - RDV technique,
   - Autre
-- L'adresse où c'est déroulé le rendez-vous,
+- L'adresse où s'est déroulé le rendez-vous,
 - Le / Les interlocuteur(s) présent(s) aux rendez-vous,
 - Le compte-rendus de visite / réunion
 
@@ -129,8 +129,14 @@ Cette outil vous permet de changer la taille d'un texte préalablement selection
 <CustomCard
   img={"/img/commercial/textEditor/customer_appointment_topMenu_tools.png"}
 />
+Cette outil vous permet, pour un texte préalablement selectionné de :
 
-Citation / Séparateur / Liste / Exposant / Indice
+- Créer une citation,
+- Ajouter une séparateur
+- Créer une liste non-ordonnée,
+- Créer une liste ordonnée,
+- Mettre le texte en exposant,
+- Mettre le texte en indice,
 
 #### Lien hypertexte
 
@@ -138,11 +144,20 @@ Citation / Séparateur / Liste / Exposant / Indice
   img={"/img/commercial/textEditor/customer_appointment_topMenu_link.png"}
 />
 
+Cette outil vous permet d'ajouter un **lien hypertexte vers un site internet** ou bien de le supprimer.
+
 #### Alignement de texte
 
 <CustomCard
   img={"/img/commercial/textEditor/customer_appointment_topMenu_textAlign.png"}
 />
+
+Cette outil vous permet de changer **l'alignement** d'un texte préalablement selectionné. Vous pouvez :
+
+- Aligner à gauche,
+- Centrer,
+- Justifier,
+- Aligner à droite
 
 #### Raccourcis
 
@@ -150,10 +165,83 @@ Citation / Séparateur / Liste / Exposant / Indice
   img={"/img/commercial/textEditor/customer_appointment_topMenu_shortcut.png"}
 />
 
+Cette outil vous permet d'acceder à des **raccourcis en lien avec le client** selectionné. Vous pouvez :
+
+- Ajouter le nom du client,
+- Ajouter l'adresse postale du client,
+- Ajouter l'adresse mail de contact du client,
+- Ajouter le numéro de téléphone principale du client,
+- Noter un rendez-vous en fonction d'un nombre d'étoile ⭐⭐⭐
+
 ### Edition rapide
 
 <CustomCard
   img={"/img/commercial/textEditor/customer_appointment_quickMenu.png"}
 />
 
+Lorsqu'un texte est selectionné, une bulle de modification rapide s'ouvre pour procéder à des changements rapides. Vous pouvez :
+
+- Changer la couleur du texte,
+- Mettre en gras,
+- Mettre en italique,
+- Souligner le texte,
+- Ajouter / supprimer un lien,
+- Modifier l'alignement du texte :
+  - Aligner à gauche,
+  - Centrer,
+  - Justifier,
+  - Aligner à droite
+
+### Nouvelle ligne de texte
+
+<CustomCard
+  img={"/img/commercial/textEditor/customer_appointment_newLine.png"}
+/>
+
+Pour chaque nouvelle ligne un menu propose de :
+
+- Créer un titre de niveau 1 ou 2,
+- Créer une liste,
+- Changer la couleur d'écriture
+
 ## Nouveau rendez-vous
+
+<div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
+  <img src={"/img/illustration/circle-plus.svg"} alt="Commercial" />
+  <p style={{ margin: 0 }}>
+    Un nouveau rendez-vous peut être créé en cliquant sur <b>le "+"</b> ou le
+    bouton <b>"Nouveau rendez-vous"</b>.
+  </p>
+</div>
+
+Un clic sur le bouton déclenche l'ouverture d'une fenêtre contextuelle :
+
+<CustomCard img={"/img/commercial/customer_appointment_new.png"} />
+
+Dans ce mode, vous pouvez saisir :
+
+- Le type de rendez-vous <span style={{color:"red", fontWeight:"bold"}}> \*</span> :
+  - RDV de démarchage,
+  - RDV de courtoisie,
+  - RDV technique,
+  - Autre
+- La date de rendez-vous **(régler sur la date actuelle par défaut)**,
+- Le / Les interlocuteur(s) présent(s) aux rendez-vous,
+- L'adresse où c'est déroulé le rendez-vous <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
+- Le compte-rendus de visite / réunion
+
+:::tip
+
+Un clic sur le bouton **"Adresse de XXX"** remplis automatiquement les champs Adresse, Code postal et Ville.
+
+:::
+:::caution
+
+Un commercial doit être assigné comme **"Commercial référent"** pour pouvoir ajouter un nouvel rendez-vous.
+
+**2 champs** de saisie sont obligatoires <span style={{color:"red", fontWeight:"bold"}}>(\*)</span> pour valider la création :
+
+- Le type de rendez-vous <span style={{color:"red", fontWeight:"bold"}}> \*</span>
+- L'adresse où c'est déroulé le rendez-vous <span style={{color:"red", fontWeight:"bold"}}> \*</span>,
+
+:::
