--- a/docs/docs/commercial/navigation.mdx
+++ b/docs/docs/commercial/navigation.mdx
@@ -6,6 +6,8 @@ import CustomCard from "../../src/components/utils/CustomCard.tsx";
 
 # Navigation
 
+Un système de navigation par onglet a été mis en place afin de filtrer le carnet d'adresse.
+
 ## Commerciaux
 
 <CustomCard img={"/img/commercial/commercial_menu.png"} />
@@ -26,6 +28,7 @@ Chaque client est classé dans **une seule catégorie** :
 - Maitre d'œuvre,
 - Architecte,
 - Maçon,
+- Promoteur,
 - Charpentier,
 - Serrurerie,
 - Autre → Correspondant aux clients n'étant pas catalogués dans les catégories précédentes.
