--- a/docs/docs/commercial/presentation.mdx
+++ b/docs/docs/commercial/presentation.mdx
@@ -12,14 +12,14 @@ Le module **"Commercial"** se compose de deux parties principales :
 
 ## En-tête
 
-<CustomCard img={"/img/commercial/header.png"} />
+<CustomCard img={"/img/header/header.png"} />
 
 Cette zone permet de naviguer entre les modules et de réaliser une recherche dans la base de données.
 
 Pour plus d'informations :
 
 - [Authentification](/docs/en-tête/authentification)
-- [Navigation](/docs/en-tête/navigation)
+- [Navigation entre les modules](/docs/en-tête/navigation)
 - [Moteur de recherche](/docs/en-tête/searchBar)
 
 ## Application
