--- a/docs/docs/planning/planning.mdx
+++ b/docs/docs/planning/planning.mdx
@@ -2,8 +2,14 @@
 sidebar_position: 3
 ---
 
-# Moteur de recherche
+import DocCardList from "@theme/DocCardList";
+
+# Planning
+
+Fonctionnalité du module **"Planning"**
 
 **🚧 En cours de construction**
 
 ![alt text]("/../../../static/img/illustration/Bricklayer-bro.svg)
+
+<DocCardList />
