--- a/docs/docs/commercial/client/facturation-comptabilite.mdx
+++ b/docs/docs/commercial/client/facturation-comptabilite.mdx
@@ -3,6 +3,7 @@ sidebar_position: 3
 ---
 
 import CustomCard from "../../../src/components/utils/CustomCard.tsx";
+import CustomItem from "../../../src/components/utils/CustomItem.tsx";
 
 # Facturation / Comptabilité
 
@@ -45,13 +46,12 @@ La facturation de l'année passée et de l'année en cours sera récupérée dep
 
 ### Mode édition
 
-<div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
-  <img src={"/img/illustration/pencil.svg"} alt="Commercial" />
-  <p style={{ margin: 0 }}>
-    Le mode édition peut se lancer en cliquant sur <b>le crayon</b> en haut à
-    droite de la carte.
-  </p>
-</div>
+<CustomItem
+  logoType={"pencil"}
+  content={
+    "Le mode édition peut se lancer en cliquant sur <b>le crayon</b> en haut à droite de la carte."
+  }
+/>
 
 <CustomCard img={"/img/commercial/customer_payment_edit.png"} />
 
