--- a/docs/docs/commercial/client/relation-commerciale.mdx
+++ b/docs/docs/commercial/client/relation-commerciale.mdx
@@ -3,6 +3,7 @@ sidebar_position: 2
 ---
 
 import CustomCard from "../../../src/components/utils/CustomCard.tsx";
+import CustomItem from "../../../src/components/utils/CustomItem.tsx";
 
 # Relation Commerciale
 
@@ -19,7 +20,7 @@ La carte **Relation commercial** affiche plusieurs informations :
 - Objectif de production pour l'année n-1 avec le client séléctionné,
 - Production de l'année n-1 avec le client séléctionné,
 - Objectif de production pour l'année cours avec le client séléctionné,
-- Production de l'année en cours avec le client séléctionné,
+- La mise en place d'un contrat cadre si visible,
 - Grille tarifaire au format PDF
 
 :::info
@@ -30,39 +31,38 @@ La production de l'année passée et de l'année en cours sera récupérée depu
 
 ### Mode édition
 
-<div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
-  <img src={"/img/illustration/pencil.svg"} alt="Commercial" />
-  <p style={{ margin: 0 }}>
-    Le mode édition peut se lancer en cliquant sur <b>le crayon</b> en haut à
-    droite de la carte.
-  </p>
-</div>
+<CustomItem
+  logoType={"pencil"}
+  content={
+    "Le mode édition peut se lancer en cliquant sur <b>le crayon</b> en haut à droite de la carte."
+  }
+/>
 
 <CustomCard img={"/img/commercial/customer_relationship_edit.png"} />
 
 Dans ce mode vous pouvez modifier :
 
 - Le / Les commerciaux référent(s),
-- Objectif de production pour l'année n-1 avec le client séléctionné,
-- Objectif de production pour l'année an cours avec le client séléctionné,
+- L'objectif de production pour l'année n-1 avec le client séléctionné,
+- L'objectif de production pour l'année an cours avec le client séléctionné,
+- La mise en place d'un contrat cadre,
 - Le ficher "Grille tarifaire" **au format PDF**
 
 :::info
 
-<div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
-  <img src={"/img/illustration/chevron-up.svg"} alt="Commercial" />
-  <p style={{ margin: 0 }}>
-    Un clic sur <b>les chevrons hauts</b> permet une incrémentation de 10
-    projets.
-  </p>
-</div>
+<CustomItem
+  logoType={"chevron-up"}
+  content={
+    "Un clic sur <b>les chevrons hauts</b> permet une incrémentation de 10 projets."
+  }
+/>
 
-<div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
-  <img src={"/img/illustration/chevron-down.svg"} alt="Commercial" />
-  <p style={{ margin: 0 }}>
-    Un clic sur <b>les chevrons bas</b> permet une décrémentation de 10 projets.
-  </p>
-</div>
+<CustomItem
+  logoType={"chevron-down"}
+  content={
+    "Un clic sur <b>les chevrons bas</b> permet une décrémentation de 10 projets."
+  }
+/>
 
 Une saisie manuel est toujours possible.
 
