--- a/docs/docs/commercial/nouveau-client.mdx
+++ b/docs/docs/commercial/nouveau-client.mdx
@@ -3,17 +3,16 @@ sidebar_position: 4
 ---
 
 import CustomCard from "../../src/components/utils/CustomCard.tsx";
+import CustomItem from "../../src/components/utils/CustomItem.tsx";
 
 # Nouveau client
 
-<div style={{ display: "flex", gap: "8px", marginBottom: "32px" }}>
-  <img src={"/img/illustration/circle-plus.svg"} alt="Commercial" />
-  <p style={{ margin: 0 }}>
-    N'importe quelle commercial peut créer une nouvelle fiche client dans la
+<CustomItem
+  logoType={"circle-plus"}
+  content={`N'importe quelle commercial peut créer une nouvelle fiche client dans la
     base de donnée. Pour cela il suffit de cliquer sur le <b>le "+"</b> ou le
-    bouton <b>"Nouvelle fiche client"</b> à droite des filtres "Commerciaux".
-  </p>
-</div>
+    bouton <b>"Nouvelle fiche client"</b> à droite des filtres "Commerciaux".`}
+/>
 
 Un clic sur le bouton déclenche l'ouverture d'une fenêtre contextuelle :
 
