--- a/docs/docs/en-tête/en-tête.mdx
+++ b/docs/docs/en-tête/en-tête.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 ---
 
 import CustomCard from "../../src/components/utils/CustomCard.tsx";
@@ -7,7 +7,15 @@ import DocCardList from "@theme/DocCardList";
 
 # En-tête
 
-Décomposition de **l'en-tête**
+L'en-tête de l'application est conçu pour vous offrir une expérience utilisateur optimale. Il se compose de plusieurs éléments clés qui vous permettent de naviguer facilement dans l'application et d'accéder aux fonctionnalités dont vous avez besoin.
+
+Tout d'abord, la partie **["Authentification"](/docs/en-tête/authentification)** vous permet de vous connecter à votre compte utilisateur pour accéder à l'ensemble des fonctionnalités de l'application. Cette étape est cruciale pour garantir la sécurité de vos données et la confidentialité de vos informations.
+
+Ensuite, le **["Choix des modules"](/docs/en-tête/modules)** vous permet de sélectionner le module que vous souhaitez utiliser. Avec une navigation simple et intuitive, vous pouvez passer facilement d'un module à l'autre pour accéder à l'ensemble de vos dossiers et fiches clients.
+
+Pour vous accompagner dans l'utilisation de notre application, nous avons inclus un accès direct à **l'Aide en ligne**. Vous pouvez ainsi trouver rapidement des réponses à vos questions ou des conseils pour utiliser les fonctionnalités avancées de notre application.
+
+Enfin, nous avons ajouté une **Boîte à idées** et un **[Moteur de recherche](/docs/en-tête/moteur-de-recherche)** pour vous permettre de donner votre avis sur notre application et d'accéder rapidement à des informations spécifiques. Ces fonctionnalités sont essentielles pour vous offrir une expérience utilisateur sur mesure et pour répondre au mieux à vos besoins.
 
 <CustomCard img={"/img/header/header.png"} />
 
